crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__annotated_trailing_lambda.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(POSTFIX_UNARY_EXPRESSION)
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
StartNode(CALL_EXPRESSION)
StartNode(LABEL)
AddToken
AddToken
FinishNode
StartNode(LAMBDA_LITERAL)
AddToken
StartNode(LAMBDA_PARAMETERS)
StartNode(LAMBDA_PARAMETER)
StartNode(VARIABLE_DECLARATION)
AddToken
FinishNode
FinishNode
AddToken
StartNode(LAMBDA_PARAMETER)
StartNode(VARIABLE_DECLARATION)
AddToken
FinishNode
FinishNode
FinishNode
AddToken
StartNode(EXPRESSION_STATEMENT)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(BINARY_EXPRESSION)
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode
