crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__anonymous_function_optional_types.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(ANONYMOUS_FUNCTION)
AddToken
StartNode(VALUE_PARAMETERS)
AddToken
StartNode(VALUE_PARAMETER)
AddToken
FinishNode
AddToken
StartNode(VALUE_PARAMETER)
AddToken
AddToken
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
FinishNode
AddToken
StartNode(VALUE_PARAMETER)
AddToken
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
AddToken
FinishNode
AddToken
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(BINARY_EXPRESSION)
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
FinishNode
