crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__call_chain.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(POSTFIX_UNARY_EXPRESSION)
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
StartNode(CALL_EXPRESSION)
StartNode(VALUE_ARGUMENTS)
AddToken
AddToken
FinishNode
FinishNode
StartNode(NAVIGATION_SUFFIX)
AddToken
AddToken
FinishNode
StartNode(CALL_EXPRESSION)
StartNode(VALUE_ARGUMENTS)
AddToken
StartNode(VALUE_ARGUMENT)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
AddToken
StartNode(VALUE_ARGUMENT)
AddToken
AddToken
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
StartNode(NAVIGATION_SUFFIX)
AddToken
AddToken
FinishNode
FinishNode
