crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__expr__tests__generic_call.snap
---
source: crates/kotlin-syntax/src/parser/grammar/expr.rs
expression: out
---
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(POSTFIX_UNARY_EXPRESSION)
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
StartNode(TYPE_ARGUMENTS)
AddToken
StartNode(TYPE_PROJECTION)
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
FinishNode
AddToken
FinishNode
StartNode(CALL_EXPRESSION)
StartNode(VALUE_ARGUMENTS)
AddToken
StartNode(VALUE_ARGUMENT)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
AddToken
StartNode(VALUE_ARGUMENT)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
AddToken
StartNode(VALUE_ARGUMENT)
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
Tombstone
StartNode(PRIMARY_EXPRESSION)
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode
